Fixed circle overlap in navigation bar

--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,14 @@
 	width: 100%;
 }
 
+.navBand {
+	background-color: #F7882F;
+	width: 100%;
+	height: 28px;
+	position: absolute;
+	z-index: 0;
+}
+
 .navBox {
 	background-color: #F7882F;
 	height: 28px;
@@ -70,7 +78,7 @@ img {
 	position: absolute;
 	z-index: 2;
 	font-weight: bold;
-	/*margin-left: 20px;*/
+/*	margin-left: 20px;*/
 }
 
 .navBox a {
